hphp/hack/test/typecheck/require_class/requirethis_interface.bad.php
<?hh

<<file:__EnableUnstableFeatures('require_constraint')>>

interface I {
    use T;

    public function bar(): void;
}

trait T {
    require this as I;

    public function foo(): void {
        $this->bar();
    }
}
